# pokedex-data

./: .gitignore  pyproject.toml
pokedex_data/common/clients/: supabase.py
pokedex_data/common/models/: config.py  pokemon.py
pokedex_data/common/utils/: config.py  pokemon.py
pokedex_data/get_data/: __main__.py  interfaces.py  main.py
pokedex_data/get_data/models/: pokemon.py  pokemon_species.py
pokedex_data/get_data/repositories/: pokemon.py  pokemon_species.py
pokedex_data/get_image/: __main__.py  interface.py  main.py
pokedex_data/get_image/repositories/: image.py
pokedex_data/insert_data/: __main__.py  interfaces.py  main.py
pokedex_data/insert_data/repositories/: pokemon_type.py  pokemons.py  types.py
pokedex_data/put_image/: __main__.py  interfaces.py  main.py
pokedex_data/put_image/repositories/: create_bucket.py  put_image.py
settings/: local.json.sample
supabase/: config.toml  seed.sql
