[tool.poetry]
name = "pokedex-data"
version = "0.1.0"
description = ""
authors = ["kyochanpy <nasu.9618.0527@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
